--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fr.flowsqy.stelyclaim</groupId>
-    <artifactId>stelyclaim</artifactId>
-    <version>3.0.0</version>
+    <artifactId>StelyClaim</artifactId>
+    <version>3.0.1-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -21,11 +21,11 @@
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
         <repository>
-            <id>sk89q-repo</id>
+            <id>enginehub-repo</id>
             <url>https://maven.enginehub.org/repo/</url>
         </repository>
         <repository>
-            <id>ess-repo</id>
+            <id>essentials-repo</id>
             <url>https://repo.essentialsx.net/releases/</url>
         </repository>
         <repository>
