--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -36,6 +36,7 @@ permissions:
       stelyclaim.claim.info-other: true
       stelyclaim.claim.teleport-other: true
       stelyclaim.claim.here-other: true
+      stelyclaim.claim.near-full: true
       stelyclaim.claim.listadd-other: true
       stelyclaim.claim.stats.reset-other: true
       stelyclaim.claim.stats.show-other: true
@@ -103,6 +104,12 @@ permissions:
     children:
       stelyclaim.claim.here: true
   stelyclaim.claim.here:
+    children:
+      stelyclaim.claim: true
+  stelyclaim.claim.near-full:
+    children:
+      stelyclaim.claim.near: true
+  stelyclaim.claim.near:
     children:
       stelyclaim.claim: true
   stelyclaim.claim.listadd-other:
