Add jetbrains annotations to dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
     </repositories>
 
     <dependencies>
+        <!-- Annotations -->
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>23.0.0</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>com.sk89q.worldedit</groupId>
             <artifactId>worldedit-bukkit</artifactId>
