--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -97,6 +97,7 @@ claim:
   near:
     invalid-distance: "%prefix% &8%distance% &cn'est pas une distance valide. Elle doit être supérieure à 1"
     limit: "%prefix% &cTu ne peux pas rechercher des claims à une distance de &8%distance%&c. Tu es limité à &8%max-distance%"
+    cooldown: "%prefix% &cTu dois attendre un peu avant de pouvoir refaire cette commande"
   target:
     define: "%prefix% &a%sender% &6viens de définir ton claim"
     redefine: "%prefix% &a%sender% &6viens de changer la taille de ton claim"
