Add fail message for near sub-command

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -98,6 +98,7 @@ claim:
     invalid-distance: "%prefix% &8%distance% &cn'est pas une distance valide. Elle doit être supérieure à 1"
     limit: "%prefix% &cTu ne peux pas rechercher des claims à une distance de &8%distance%&c. Tu es limité à &8%max-distance%"
     cooldown: "%prefix% &cTu dois attendre un peu avant de pouvoir refaire cette commande"
+    no-region: "%prefix% &cIl n'y a aucune région à une distance de &8%distance%"
   target:
     define: "%prefix% &a%sender% &6viens de définir ton claim"
     redefine: "%prefix% &a%sender% &6viens de changer la taille de ton claim"
