Change permission system

--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -10,131 +10,13 @@ softdepend:
   - Essentials
 api-version: 1.13
 commands:
-  claim:
+  stelyclaim:
     aliases:
-      - stelyclaim
-    permission: stelyclaim.claim
+      - claim
+    permission: stelyclaim.command.claim
     description: Root command for region manipulation
     usage: /claim <subCommand>
   bedrock:
-    permission: stelyclaim.bedrock
+    permission: stelyclaim.command.bedrock
     description: Provide instant bedrock break for survival players
     usage: /bedrock
-permissions:
-  stelyclaim.claim:
-    description: Base permission for StelyClaim command
-  stelyclaim.claim.*:
-    children:
-      stelyclaim.claim.help: true
-      stelyclaim.claim.define-other: true
-      stelyclaim.claim.redefine-other: true
-      stelyclaim.claim.addmember-other: true
-      stelyclaim.claim.removemember-other: true
-      stelyclaim.claim.addowner-other: true
-      stelyclaim.claim.removeowner-other: true
-      stelyclaim.claim.remove-other: true
-      stelyclaim.claim.info-other: true
-      stelyclaim.claim.teleport-other: true
-      stelyclaim.claim.here-other: true
-      stelyclaim.claim.near-full: true
-      stelyclaim.claim.listadd-other: true
-      stelyclaim.claim.stats.reset-other: true
-      stelyclaim.claim.stats.show-other: true
-  stelyclaim.claim.help:
-    children:
-      stelyclaim.claim: true
-  stelyclaim.claim.define-other:
-    children:
-      stelyclaim.claim.define: true
-  stelyclaim.claim.define:
-    children:
-      stelyclaim.claim.pillar: true
-  stelyclaim.claim.redefine-other:
-    children:
-      stelyclaim.claim.redefine: true
-  stelyclaim.claim.redefine:
-    children:
-      stelyclaim.claim.pillar: true
-  stelyclaim.claim.pillar:
-    children:
-      stelyclaim.claim: true
-  stelyclaim.claim.addmember-other:
-    children:
-      stelyclaim.claim.addmember: true
-  stelyclaim.claim.addmember:
-    children:
-      stelyclaim.claim: true
-  stelyclaim.claim.removemember-other:
-    children:
-      stelyclaim.claim.removemember: true
-  stelyclaim.claim.removemember:
-    children:
-      stelyclaim.claim: true
-  stelyclaim.claim.addowner-other:
-    children:
-      stelyclaim.claim.addowner: true
-  stelyclaim.claim.addowner:
-    children:
-      stelyclaim.claim: true
-  stelyclaim.claim.removeowner-other:
-    children:
-      stelyclaim.claim.removeowner: true
-  stelyclaim.claim.removeowner:
-    children:
-      stelyclaim.claim: true
-  stelyclaim.claim.remove-other:
-    children:
-      stelyclaim.claim.remove: true
-  stelyclaim.claim.remove:
-    children:
-      stelyclaim.claim.pillar: true
-  stelyclaim.claim.info-other:
-    children:
-      stelyclaim.claim.info: true
-  stelyclaim.claim.info:
-    children:
-      stelyclaim.claim: true
-  stelyclaim.claim.teleport-other:
-    children:
-      stelyclaim.claim.teleport: true
-  stelyclaim.claim.teleport:
-    children:
-      stelyclaim.claim: true
-  stelyclaim.claim.here-other:
-    children:
-      stelyclaim.claim.here: true
-  stelyclaim.claim.here:
-    children:
-      stelyclaim.claim: true
-  stelyclaim.claim.near-full:
-    children:
-      stelyclaim.claim.near: true
-  stelyclaim.claim.near:
-    children:
-      stelyclaim.claim: true
-  stelyclaim.claim.listadd-other:
-    children:
-      stelyclaim.claim.listadd: true
-  stelyclaim.claim.listadd:
-    children:
-      stelyclaim.claim: true
-  stelyclaim.claim.stats-other:
-    children:
-      stelyclaim.claim.stats: true
-  stelyclaim.claim.stats:
-    children:
-      stelyclaim.claim: true
-  stelyclaim.claim.stats.reset:
-    children:
-      stelyclaim.claim.stats: true
-  stelyclaim.claim.stats.show:
-    children:
-      stelyclaim.claim.stats: true
-  stelyclaim.claim.stats.reset-other:
-    children:
-      stelyclaim.claim.stats.reset: true
-      stelyclaim.claim.stats-other: true
-  stelyclaim.claim.stats.show-other:
-    children:
-      stelyclaim.claim.stats.show: true
-      stelyclaim.claim.stats-other: true
