--- a/plugin/src/main/resources/messages.yml
+++ b/plugin/src/main/resources/messages.yml
@@ -34,12 +34,13 @@ help:
   near: '%prefix% &6/claim near [distance]'
   listadd: '%prefix% &6/claim listadd [Page]'
   listadd-other: '%prefix% &6/claim listadd [Joueur] [Page]'
+  player: '%prefix% &6/claim player'
   stats: '%prefix% &6/claim stats <sous-commande> [Commande]'
   stats-other: '%prefix% &6/claim stats <sous-commande> [Joueur] [Commande]'
-  stats_reset: '%prefix% &6/claim stats reset [Commande]'
-  stats_reset-other: '%prefix% &6/claim stats reset [Joueur] [Commande]'
-  stats_show: '%prefix% &6/claim stats show [Commande]'
-  stats_show-other: '%prefix% &6/claim stats show [Joueur] [Commande]'
+  stats-reset: '%prefix% &6/claim stats reset [Commande]'
+  stats-reset-other: '%prefix% &6/claim stats reset [Joueur] [Commande]'
+  stats-show: '%prefix% &6/claim stats show [Commande]'
+  stats-show-other: '%prefix% &6/claim stats show [Joueur] [Commande]'
 
 claim:
   world:
